deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-frontend
  labels:
    app: flask-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-frontend
    spec:
      containers:
      - image: kealiu/flaskecho:lastest
        imagePullPolicy: Always
        name: flask-frontend
        ports:
        - containerPort: 5000
          protocol: TCP
     
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  labels:
    app: flask-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
      - image: kealiu/flaskecho:lastest
        imagePullPolicy: Always
        name: flask-backend
        ports:
        - containerPort: 5000
          protocol: TCP
