services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-frontend
spec:
  selector:
    app: flask-frontend
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
spec:
  selector:
    app: flask-backend
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 5000
