ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ipv6ingress
    annotations:
        alb.ingress.kubernetes.io/ip-address-type: dualstack
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip

spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-frontend
              port:
                number: 80
